(lang dune 3.10)

(name mathsparser)

(generate_opam_files true)

(source
 (github joseph-beck/caml-maths))

(authors "Joseph")

(maintainers "Joseph")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name mathsparser)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
